--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -7,21 +7,21 @@
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Calculus II MAT 1224.009 (Spring 2023) (by Josu&eacute; Tonelli-Cueto)</title>
-    <meta name="description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2022" />
+    <meta name="description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2023" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/course.html" />
     <meta property="og:title" content="Calc II at UTSA by J. Tonelli-Cueto" /><!--35char-->
-    <meta property="og:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2022"><!--65char-->
+    <meta property="og:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2023"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4UTSA.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
     <meta name="twitter:title" content="Calculus II MAT 1224.009 (Spring 2023) (by Josu&eacute; Tonelli-Cueto)" />
-    <meta name="twitter:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2022" />
+    <meta name="twitter:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2023" />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4UTSA.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -75,7 +75,7 @@
 
         <ul class="navbar-nav r-auto">
 	<li class="nav-item active">
-            <a class="nav-link" href="UTSA_MAT1224_spring2022.html">en</a>
+            <a class="nav-link" href="UTSA_MAT1224_spring2023.html">en</a>
           </li>
         </ul>
       </div>
@@ -637,7 +637,7 @@ b) Structure the techniques of integration seen so far in an unified way.
 <p>
 Differential equations play a central role in science, as they allow us to describe precisely how the different variables that we measure change in terms of the other variables that we measure. In general, understanding how a variable of interest—such as position, heat, concentration of a certain molecule—means understanding the underlying differential equation that describes how it varies. Now, solving differential equations
 \[\dot{x}=f(x,t),\]
-where $\dot{x}$ denotes the derivative of $x$ with respect to $t$, is hard in general—note that a more propper formal way to write the differential equation is $\dot{x}(t)=f(x(t),t)$ since we are trying to find $x$ as a function $t\mapsto x(t)$ of $t$. Even when we are just interested in the evolution of a single variable $t\mapsto x(t)\in\mathbb{R}$ and not a vector function $t\mapsto x(t)\in\mathbb{R}^n$ is the solution of these differential equations hard.
+where $\dot{x}$ denotes the derivative of $x$ with respect to $t$, is hard in general—note that a more propper formal way to write the differential equation is $\dot{x}(t)=f(x(t),t)$ since we are trying to find $x$ as a function $t\mapsto x(t)$ of $t$. Even when we are just interested in the evolution of a single variable $t\mapsto x(t)\in\mathbb{R}$ and not a vector function $t\mapsto x(t)\in\mathbb{R}^n$, finding the solution of these differential equations is hard.
 </p>
 <p>
 Now, sometimes, the equations we want to solve are of the form
@@ -943,7 +943,7 @@ The midterm exams will take place in the following days (any change will be comm
 <p>In case you cannot attend the class the day of the midterm exam, you should inform the instructor as soon as possible and always before the exam. Otherwise, no alternative arrangement will be possible.</p>
 <h3>Final Exam (May 10, 9:00 am-10:50 am)</h3>
 <p>
-In accordance with the <a href="https://asap.utsa.edu/terms.htm">2022 Spring Final Exam Schedule</a>, the final exam of this course will on Wednesday, May 10, from 9.00 am to 10:50 am. The final exam will consist of written problems similar to the homework problems and problems from the midterm exams. More details on the location will be given later.
+In accordance with the <a href="https://asap.utsa.edu/terms.htm">2023 Spring Final Exam Schedule</a>, the final exam of this course will on Wednesday, May 10, from 9.00 am to 10:50 am. The final exam will consist of written problems similar to the homework problems and problems from the midterm exams. More details on the location will be given later.
 </p>
 </div>
 <hr/>
