--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -6,22 +6,22 @@
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="es"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Calculus II MAT 1224.009 (Spring 2023) (by Josu&eacute; Tonelli-Cueto)</title>
+    <title>Calculus II MAT 1224.009 (Spring 2023) (by Dr. Josu&eacute; Tonelli-Cueto)</title>
     <meta name="description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2023" />
     <!--Social Media metadata-->
     <meta property="og:type" content="website" >
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="es_ES" />
     <meta property="og:url" content="https://tonellicueto.xyz/course.html" />
-    <meta property="og:title" content="Calc II at UTSA by J. Tonelli-Cueto" /><!--35char-->
-    <meta property="og:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2023"><!--65char-->
+    <meta property="og:title" content="Calc II at UTSA by Dr. J. Tonelli-Cueto" /><!--35char-->
+    <meta property="og:description" content="Calculus II (MAT 1224) course at UTSA by Dr. Josu&eacute; Tonelli-Cueto in Spring 2023"><!--65char-->
     <meta property="og:image" content="https://tonellicueto.xyz/imgs/SM4UTSA.png"><!--300KB and minimum dimensions of 300 x 200-->
     <!--Twitter metadata-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@tonellicueto" />
     <meta name="twitter:creator" content="@tonellicueto" />
-    <meta name="twitter:title" content="Calculus II MAT 1224.009 (Spring 2023) (by Josu&eacute; Tonelli-Cueto)" />
-    <meta name="twitter:description" content="Calculus II (MAT 1224) course at UTSA by Josu&eacute; Tonelli-Cueto in Spring 2023" />
+    <meta name="twitter:title" content="Calculus II MAT 1224.009 (Spring 2023) (by Dr. Josu&eacute; Tonelli-Cueto)" />
+    <meta name="twitter:description" content="Calculus II (MAT 1224) course at UTSA by Dr. Josu&eacute; Tonelli-Cueto in Spring 2023" />
     <meta name="twitter:image" content="https://tonellicueto.xyz/imgs/SM4UTSA.jpg" />
     <!--  Bootstrap core CSS  -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
