--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -363,7 +363,11 @@ The definite integral is the signed area under a function. Because of this, we c
 \[\int_a^b\,(f(x)-g(x))\,\mathrm{d}x.\]
 </p>
 <p>
-<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Katherine_Johnson">Katherine Johnson</a>, African-American mathematician whose calculations of orbital mechanics where fundamental for the sucess of NASA's first crewed spaceflights. Additional materials to learn more: <a href="https://www.youtube.com/watch?v=nKxgieXQ82w"><em>Katherine Johnson: An American Hero</em> by NASA in <em>youtube</em></a>. <a href="https://www.youtube.com/watch?v=SvsHjWVgqcY&t=33s"><em>The Woman Behind Project Mercury (Outlier)</em> by Timeline in <em>youtube</em></a>. <b><em>Film to Watch:</em></b> <a href="https://en.wikipedia.org/wiki/Hidden_Figures">Hidden Figures</a>. Accuracy: <a href="https://www.looper.com/485561/how-accurate-is-hidden-figures/"><em>How Accurate Is Hidden Figures?</em> in Looper</a>
+<em>MathInContext</em>: <a href="https://en.wikipedia.org/wiki/Katherine_Johnson">Katherine Johnson</a>, African-American mathematician whose calculations of orbital mechanics where fundamental for the sucess of NASA's first crewed spaceflights. Additional materials to learn more:
+<a href="https://www.youtube.com/watch?v=nKxgieXQ82w"><em>Katherine Johnson: An American Hero</em> by NASA in <em>youtube</em></a>.
+<a href="https://www.youtube.com/watch?v=SvsHjWVgqcY&t=33s"><em>The Woman Behind Project Mercury (Outlier)</em> by Timeline in <em>youtube</em></a>.
+<a href="https://en.wikipedia.org/wiki/Computer_(occupation)"><em>Computer (occupation)</em> in <em>Wikipedia</em></a>, with additional readings of <a href="https://en.wikipedia.org/wiki/Harvard_Computers">Harvard Computers<a/> and <a href="https://en.wikipedia.org/wiki/West_Area_Computers">West Area Compiuters</a>.
+<b><em>Film to Watch:</em></b> <a href="https://en.wikipedia.org/wiki/Hidden_Figures">Hidden Figures</a>. Accuracy: <a href="https://www.looper.com/485561/how-accurate-is-hidden-figures/"><em>How Accurate Is Hidden Figures?</em> in Looper</a>
 </p>
 <p>
 <b>Learning Objectives:</b>
@@ -643,13 +647,14 @@ where $\dot{x}$ denotes the derivative of $x$ with respect to $t$, is hard in ge
 Now, sometimes, the equations we want to solve are of the form
 \[\dot{x}=g(x)h(t).\]
 When this is the case, we can <em>separate the variables</em>, i.e., write the equation as
-\[\frac{\mathfrm{d}x}{g(x)}=h(t)\mathfrm{d}x,\]
+\[\frac{\mathrm{d}x}{g(x)}=h(t)\mathrm{d}x,\]
 and integrate to obtain invariants of our differential equation and so solve the differential equation. The focus of this lecture is on this case.
 </p>
 <p>
-<em>MathInContext</em>: Where do differential equations appear? Although the differential equations in physics are widely taught in many curricula, differential equations are not limited to physics. We can find them in all the sciences: in marketing
+<em>MathInContext</em>: Where do differential equations appear? Although the differential equations in physics are widely taught in many curricula, differential equations are not limited to physics. We can find them in all the sciences: in marketing, describing the efficacy of publicity; in economy, describing how price varies in terms of the offer and the demans; in chemistry, describing how the concentrations of the different molecules change during a chemical rreaction; in biology, describing how populations grow and decrease in an ecosystem; and in epideomology, describing how a dissease is transmitted across a population.
 Additional materials to learn more:
-<!--<a href="https://www.youtube.com/watch?v=WQWkG9cQ8NQ"><em>Integers & Rationals are both infinite but is it the SAME infinity?</em> by Dr. Trefor Bazett in <em>youtube</em></a>.-->
+<a href="amelkin">Chapter 1 of Amelkin's book <em>Differential Equations in Applications</em></a>, to explore more on the applications said above in an accessible way.
+<a href="https://www.youtube.com/watch?v=gBjX9ZgcMW8">The talk <em>Taking Mathematics to Heart</em> by Alfio Quarteroni</a>, to see how partial differential equations—a more general type of differential equation where we don't only measure variation with respect to time—can be applied to model the human heart. [The point of watching the talk is not to understand everything, but to get a taste how compteporary applied mathematics look like.]
 </p>
 <p>
 <b>Learning Objectives:</b>
@@ -828,6 +833,9 @@ The final exam will take place on Wednesday, May 10, from 9.00 to 10.50 am. More
 	the course.
 </p>
 <ol>
+  <li id="amelkin" style="list-style-type:'[1]';">
+	V. Amelkin. <i>Differential Equations In Applications (Science For Everyone)</i>. Trans. by E. Yankovsky. Mir, 1990.<br/>url: <span><a href="https://archive.org/embed/AmelkinDifferentialEquationsInApplicationsScienceForEveryoneMir1990">https://archive.org/embed/AmelkinDifferentialEquationsInApplicationsScienceForEveryoneMir1990</a></span>
+	</li>
 	<li style="list-style-type:'[2]';">
 	B. Demidovich, ed. <i>Problems in Mathematical Analysis</i>. Trans. by G. Yankovsky. Mir, 1970.<br/>url: <span><a href="https://archive.org/embed/DemidovichEtAlProblemsInMathematicalAnalysisMir1970">https://archive.org/embed/DemidovichEtAlProblemsInMathematicalAnalysisMir1970</a></span>
 	</li>
