--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -653,7 +653,7 @@ and integrate to obtain invariants of our differential equation and so solve the
 <p>
 <em>MathInContext</em>: Where do differential equations appear? Although the differential equations in physics are widely taught in many curricula, differential equations are not limited to physics. We can find them in all the sciences: in marketing, describing the efficacy of publicity; in economy, describing how price varies in terms of the offer and the demans; in chemistry, describing how the concentrations of the different molecules change during a chemical rreaction; in biology, describing how populations grow and decrease in an ecosystem; and in epideomology, describing how a dissease is transmitted across a population.
 Additional materials to learn more:
-<a href="amelkin">Chapter 1 of Amelkin's book <em>Differential Equations in Applications</em></a>, to explore more on the applications said above in an accessible way.
+<a href="amelkin">Chapter 1 of Amelkin's book <em>Differential Equations in Applications</em></a>, to explore the mentioned applications in an accessible way.
 <a href="https://www.youtube.com/watch?v=gBjX9ZgcMW8">The talk <em>Taking Mathematics to Heart</em> by Alfio Quarteroni</a>, to see how partial differential equations—a more general type of differential equation where we don't only measure variation with respect to time—can be applied to model the human heart. [The point of watching the talk is not to understand everything, but to get a taste how compteporary applied mathematics look like.]
 </p>
 <p>
