--- a/UTSA_MAT1224_spring2023.html
+++ b/UTSA_MAT1224_spring2023.html
@@ -626,11 +626,11 @@ d) Use the comparison theorem to determine whether an improper integral is conve
 <p>
 In this lecture, we will review the techniques of integration and types of integrals seen so far in the course: <a href=#lec1>$u$-substitution (or change of variables)</a>, <a href="#lec8">integration by parts</a>, <a href="#lec9">trigonometric integrals</a>, <a href="#lec10">trigonometric substitutions</a>, <a href="#lec11">integrals of rational functions</a> and <a href="#lec12">improper integrals</a>.
 </p>
-<p>
+<!--<p>
 <em>MathInContext</em>:
 Additional materials to learn more:
-<!--<a href="https://www.youtube.com/watch?v=WQWkG9cQ8NQ"><em>Integers & Rationals are both infinite but is it the SAME infinity?</em> by Dr. Trefor Bazett in <em>youtube</em></a>.-->
-</p>
+<a href="https://www.youtube.com/watch?v=WQWkG9cQ8NQ"><em>Integers & Rationals are both infinite but is it the SAME infinity?</em> by Dr. Trefor Bazett in <em>youtube</em></a>.
+</p>-->
 <p>
 <b>Learning Objectives:</b>
 a) To consolidate the techniques of integration seen so far.
