--- a/cv.html
+++ b/cv.html
@@ -116,8 +116,8 @@
 
 
 <div class="container">
-<hr>
-   <p style="color:#ee2523;text-align:center;font-variant:small-caps;">In the Job Market</p>
+<!--<hr>
+   <p style="color:#ee2523;text-align:center;font-variant:small-caps;">In the Job Market</p>-->
 <hr>
   <div class="row" style="text-align:center;"><div class="col-md-4">
     <a class="btn btn-secondary" href="pdf/Long_CV_tonellicueto.pdf" role="button" style="width:80%;">PDF version</a>
@@ -1050,11 +1050,11 @@
 
           <br/><div class="cv">
           <div class="year">
-          <h4>2023</h4>
+            <h4>2023</h4>
           </div><div class="title">
-          <h4>&emsp;<i>Calculus II</i> (MATH 2414)&rdquo;</h4></div>
+          <h4>&emsp;<i>Calculus II</i> (MATH 1224)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">Course Website</a></span></h4></div>
             <div class="property">Role:</div><div class="value">Instructor</div>
-            <div class="property">Teaching load:</div><div class="value">Approximately 57 hours</div>
+            <div class="property">Teaching load:</div><div class="value">Approximately 60 hours</div>
             <div class="property">Institution:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
             <div class="property">Date:</div><div class="value">January 2023 - May 2023</div>
           </div>
@@ -1093,6 +1093,23 @@
       <br/><div class="row"><div class="col-md-12">
       <h3>Courses in an academic setting</h3>
       </div></div>
+
+      <!-- 2023
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2023</h4>
+      </div><div class="title">
+      <h4>&emsp;<i>UTSA Problem-Solving Club</i> (Spring 2023)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">Activity Website</a></span></h4></div>
+        <div class="property">Role:</div><div class="value">Organizer together with Christopher Duffer</div>
+        <div class="property">Teaching load:</div><div class="value">Approximately 30 hours</div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
+        <div class="property">Date:</div><div class="value">February 2023 - May 2023</div>
+      </div>
+
+      <!-- 2014
+           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <br/><div class="cv">
       <div class="year">
