--- a/cv_es.html
+++ b/cv_es.html
@@ -120,8 +120,8 @@
 
 
 <div class="container">
-  <hr>
-     <p style="color:#ee2523;text-align:center;font-variant:small-caps;">Buscando un trabajo</p>
+  <!--<hr>
+     <p style="color:#ee2523;text-align:center;font-variant:small-caps;">Buscando un trabajo</p>-->
   <hr>
   <div class="row" style="text-align:center;"><div class="col-md-4">
     <a class="btn btn-secondary" href="pdf/Long_CV_tonellicueto.pdf" Labor="button" style="width:80%;">Versi&oacute;n PDF [Ingl&eacute;s]</a>
@@ -1076,17 +1076,18 @@
       <!-- 2023
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
-      <br/><div class="cv">
-      <div class="year">
-      <h4>2023</h4>
-      </div><div class="title">
-      <h4>&emsp;<i>Calculus II</i> (MATH 2414)&rdquo;</h4></div>
-      <div class="year"></div><div class="title"><h4>&ensp;&emsp;<em>(<i>C&aacute;lculo II</i> (MATH 2414))</em></h4></div>
-        <div class="property">Labor:</div><div class="value">Instructor</div>
-        <div class="property">Carga docente:</div><div class="value">Approximately 57 hours</div>
-        <div class="property">Institución:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
-        <div class="property">Fecha:</div><div class="value">enero 2023 - mayo 2023</div>
-      </div>
+
+           <br/><div class="cv">
+           <div class="year">
+             <h4>2023</h4>
+           </div><div class="title">
+           <h4>&emsp;<i>Calculus II</i> (MATH 1224)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">P&aacute;gina del Curso</a></span></h4></div>
+           <div class="year"></div><div class="title"><h4>&ensp;&emsp;<em>(<i>C&aacute;lculo II</i> (MATH 2414))</em></h4></div>
+            <div class="property">Labor:</div><div class="value">Instructor</div>
+            <div class="property">Carga docente:</div><div class="value">Aproximadamente 60 horas</div>
+            <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
+            <div class="property">Fecha:</div><div class="value">enero 2023 - mayo 2023</div>
+           </div>
 
       <!-- 2021
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
@@ -1126,6 +1127,21 @@
             <br/><div class="row"><div class="col-md-12">
             <h3>Cursos en un contexto académico</h3>
             </div></div>
+
+            <!-- 2023
+                 YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+            <br/><div class="cv">
+            <div class="year">
+            <h4>2023</h4>
+            </div><div class="title">
+            <h4>&emsp;<i>UTSA Problem-Solving Club</i> (Spring 2023)<span style="float:right;"><a href="UTSA_MAT1224_spring2023.html">P&aacute;gina de la Actividad</a></span></h4></div>
+            <div class="year"></div><div class="title"><h4>&ensp;&emsp;<em>(<i>Club de Resoluci&oacute;n de Problemas de la UTSA</i> (Primavera 2023))</em></h4></div>
+              <div class="property">Labor:</div><div class="value">Organizador junto a Christopher Duffer</div>
+              <div class="property">Carga docente:</div><div class="value">Aproximadamente 30 horas</div>
+              <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></div>
+              <div class="property">Fecha:</div><div class="value">febrero 2023 - mayo 2023</div>
+            </div>
 
         <!-- 2014
              YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
