--- a/index_es.html
+++ b/index_es.html
@@ -115,9 +115,10 @@
         <h1>Josu&eacute; Tonelli Cueto</h1>
         <h2>Matem&aacute;tico</h2>
         <h3>Postdoc en<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
-        <h4 style="color:#ee2523;font-variant: small-caps;">Buscando un trabajo</h4>
+        <!--<h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>en la <a href="https://www.jhu.edu/">John Hopkins University</a></h3>-->
+        <!--<h4 style="color:#ee2523;font-variant: small-caps;">Buscando un trabajo</h4>-->
 
-        <div class="row" align="center" style="padding-top:1vw;font-size:2vw;">
+        <div class="row" align="center" style="padding-top:3vw;font-size:2vw;">
           <div class="col">
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">Sobre mi</a>
           </div>
