--- a/non-research.html
+++ b/non-research.html
@@ -111,34 +111,43 @@
   <div id="teaching">
     <h2 class="display-4">Teaching</h2>
     <p>
-       My teaching experience consist of approximately 260 hours distributed among seven university-level courses. Below, a simplified account of my teaching experience can be found. Since this is a very limited experience, I am planning to extend this experience in the next years if possible.
+       My teaching experience extends through several institutions that offer university-level courses.
      </p>
-     <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
-       <li>University of Texas at San Antonio</li>
+     <p style="text-align:center;font-size:small;">SpSe: Spring Semester. SuSe: Summer Semester. WiSe: Winter Semester.</p>
+     <div class="row"><div class="col-md-12">
+     <h3>The University of Texas at San Antonio</h3>
+     </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2023.html"  role="button">Course Webpage</a></li>
          <li><em>UTSA Problem Solving Club<em>, organizer, SpSe2023 <a class="btn btn-blog" href="UTSAProblemSolvingClub_Spring2023.html"  role="button">Activity Webpage</a></li>
+         <li><em>Calculus II<em>, instructor, SpSe2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2023.html"  role="button">Course Webpage</a></li>
        </ul>
-       <li>&Eacute;cole polytechnique</li>
+       <div class="row"><div class="col-md-12">
+       <h3>&Eacute;cole polytechnique</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</em>, supervisor (together with Elias Tsigaridas) of Aur&egrave;le Bohbot, WiSe2021-22.</li>
        </ul>
-       <li>Technische Universit&auml;t Berlin</li>
+       <div class="row"><div class="col-md-12">
+       <h3>Technische Universit&auml;t Berlin</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Effective Algebraic Geometry</em> Seminar, organizer (together with Peter B&uuml;rgisser and Alperen A. Erg&uuml;r), SuSe 2018. (<span><a href="pdf/Effective_Algebraic_Geometry_Seminar.pdf">syllabus</a></span>)</li>
        </ul>
-       <li>University of the Basque Country</li>
+       <div class="row"><div class="col-md-12">
+       <h3>University of the Basque Country</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li>Groups of units in complete discrete valuations rings (Minicourse), lecturer, February 2014.</li>
          <li>&ldquo;$\mathsf{P}$ vs. \(\mathsf{NP}\) and related topics&rdquo; Seminar, organizer (together with Luis Mart&iacute;nez) and main lecturer, WiSe 2012-13 and SuSe 2013.</li>
        </ul>
-       <li>Centro de Estudios INTEC</li>
+       <div class="row"><div class="col-md-12">
+       <h3>Centro de Estudios INTEC</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li>1st year Mathematics for students of the B.Sc. Chemical Engineering at the University of the Basque Country, private remedial teacher, SuSe 2014.</li>
          <li>1st year Linear Algebra for students of the B.Sc. Mathematics at the University of the Basque Country, private remedial teacher, WiSe 2013-14.</li>
          <li>2nd year Linear Algebra for students of the B.Sc. Mathematics at the University of the Basque Country, private remedial teacher, WiSe 2013-14.</li>
        </ul>
-     </ul>
      <p>
        For more details regarding my teaching experience, see <a href="cv.html#teaching">the corresponding section of my CV</a>.
     </p>
