--- a/non-research_es.html
+++ b/non-research_es.html
@@ -112,37 +112,47 @@
   <div id="teaching">
     <h2 class="display-4">Docencia</h2>
     <p>
-       Mi experiencia docente consta de aproximadamente 260 horas distribuidas entre siete cursos de nivel universitario. Debajo, una lista simplificada de mi experiencia docente. Debido a que esto es una experiencia docente muy limitada, espero ampliarla en los a&ntilde;os venideros.
+       Mi experiencia docente se divide entre varias instituciones que ofrecen cursos al nivel universitario.
      </p>
-     <ul style="list-style-type:none;font-weight: bold;  padding: 0em;margin-left:0.5em;">
-       <li>University of Texas at San Antonio</li>
+     <p style="text-align:center;font-size:small;">SePr: Semestre de Primavera. SeVe: Semestre de Verano. SeIn: Semestre de Invierno.</p>
+       <div class="row"><div class="col-md-12">
+       <h3>The University of Texas at San Antonio</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
-         <li><em>Calculus II<em>, instructor, SePr2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2023.html"  role="button">P&aacute;gina del Curso</a></li>
          <li><em>UTSA Problem Solving Club<em>, organizador, SePr2023 <a class="btn btn-blog" href="UTSAProblemSolvingClub_Spring2023.html"  role="button">P&aacute;gina de la Actividad</a></li>
+         <li><em>Calculus II<em>, instructor, SePr2023 <a class="btn btn-blog" href="UTSA_MAT1224_spring2023.html"  role="button">P&aacute;gina del Curso</a></li>
        </ul>
-       <li>&Eacute;cole polytechnique</li>
+       <div class="row"><div class="col-md-12">
+       <h3>&Eacute;cole polytechnique</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>3rd year Bachelor Research Project<br/>&ldquo;Topological Data Analysis in Computational Real Algebraic Geometry&rdquo;</em>, supervisor (junto a Elias Tsigaridas) de Aur&egrave;le Bohbot, SeIn2021-22.</li>
-       <li>Technische Universit&auml;t Berlin</li>
+       </ul>
+       <div class="row"><div class="col-md-12">
+       <h3>Technische Universit&auml;t Berlin</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li><em>Effective Algebraic Geometry</em> Seminar, organizador (junto a Peter B&uuml;rgisser y Alperen A. Erg&uuml;r), SeVe 2018. (<span><a href="pdf/Effective_Algebraic_Geometry_Seminar.pdf">temario</a></span>)</li>
        </ul>
-       <li>University of the Basque Country</li>
+       <div class="row"><div class="col-md-12">
+       <h3>Universidad del Pa&iacute;s Vasco/Euskal Herriko Unibertsitatea</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li>Groups of units in complete discrete valuations rings (minicurso), docente, febrero del 2014.</li>
          <li>&ldquo;$\mathsf{P}$ vs. \(\mathsf{NP}\) and related topics&rdquo; Seminar, organizador (junto a Luis Mart&iacute;nez) y docente principal, SeIn 2012-13 y SeVe 2013.</li>
        </ul>
-       <li>Centro de Estudios INTEC</li>
+       <div class="row"><div class="col-md-12">
+       <h3>Centro de Estudios INTEC</h3>
+       </div></div>
        <ul style="list-style-type:none;font-weight: normal;padding: 0em;margin-left:1.5em;">
          <li>Matem&aacute;ticas de 1º a&ntilde;o para estudiantes del Grado de Ingenier&iacute;a Qu&iacute;mica de la Universidad del Pa&iacute;s Vasco, docente privado de grupos, SeVe 2014.</li>
          <li>&Aacute;lgebra Lineal de 1º a&ntilde;o para estudiantes del Gradod de Matem&aacute;ticas de la la Universidad del Pa&iacute;s Vasco, docente privado de grupos, SeIn 2013-14.</li>
          <li>&Aacute;lgebra Lineal de 2º a&ntilde;o para estudiantes del Gradod de Matem&aacute;ticas de la la Universidad del Pa&iacute;s Vasco, docente privado de grupos, SeIn 2013-14.</li>
        </ul>
-     </ul>
      <p>
        Para m&aacute;s detalles acerca de mi experiencia docente, v&eacute;ase <a href="cv_es.html#teaching">el correspondiente apartado de mi CV</a>.
     </p>
-    <p style="text-align:center;font-size:small;">SeVe: Semestre de Verano. SeIn: Semestre de Invierno.</p>
+
   </div>
   <hr>
   <div id="popmath">
