--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
         <h1>Josu&eacute; Tonelli&#8209;Cueto</h1>
         <h2>Mathematician</h2>
         <h3>Postdoc at<br/><a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h3>
-        <h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>
-        
-        <div class="row" align="center" style="padding-top:1vw;font-size:2vw;"><!--3vw padding top if not searching for a job-->
+        <!--<h3><em>Rufus Isaacs Postdoctoral Fellow</em><br/>at <a href="https://www.jhu.edu/">John Hopkins University</a></h3>-->
+        <!--<h4 style="color:#ee2523;font-variant: small-caps;">In the Job Market</h4>-->
+
+        <div class="row" align="center" style="padding-top:3vw;font-size:2vw;"><!--3vw padding top if not searching for a job, 1vw otherwise!-->
           <div class="col">
             <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a>
           </div>
